--- a/src/core/i18n/resources/en.json
+++ b/src/core/i18n/resources/en.json
@@ -2,20 +2,21 @@
   "CITY_LIST": "City list",
   "FEELS_LIKE": "Feels like: {{value}}°",
   "TEMP": "Avg Temperature",
-  "MIN_TEMP": "Min Temperature",
-  "MAX_TEMP": "Max Temperature",
+  "TEMP_MIN": "Min Temperature",
+  "TEMP_MAX": "Max Temperature",
   "ADD_NEW_CITY": "Add New City",
   "CLOSE": "Close",
   "INPUT_CITY_NAME": "Search by city name",
   "SEARCH": "Search",
   "SEARCH_RESULT": "Search Result",
   "NO_RESULT": "No Result",
-  "SELECTED_CITIES": "Selected Cities",
+  "SELECTED_CITIES": "Selected cities",
   "DISABLED_ADD_MESSAGE": "You have selected this city or reach maximun 10 cities.",
   "ADD": "Add",
   "REMOVE": "Remove",
   "MORNING": "Morning",
   "AFTERNOON": "Afternoon",
   "EVENING": "Evening",
-  "NIGHT": "Night"
+  "NIGHT": "Night",
+  "CURRENT_LOCATION": "Current location"
 }
