--- a/src/core/i18n/resources/vn.json
+++ b/src/core/i18n/resources/vn.json
@@ -2,20 +2,21 @@
   "CITY_LIST": "Danh sách thành phố",
   "FEELS_LIKE": "Cảm giác như: {{value}}°",
   "TEMP": "Nhiệt Độ Trung Bình",
-  "MIN_TEMP": "Nhiệt Độ Thấp Nhất",
-  "MAX_TEMP": "Nhiệt Độ Cao Nhất",
+  "TEMP_MIN": "Nhiệt Độ Thấp Nhất",
+  "TEMP_MAX": "Nhiệt Độ Cao Nhất",
   "ADD_NEW_CITY": "Thêm Mới Thành Phố",
   "CLOSE": "Đóng",
   "INPUT_CITY_NAME": "Tìm theo tên thành phố",
   "SEARCH": "Tìm kiếm",
   "SEARCH_RESULT": "Kết quả tìm kiếm",
   "NO_RESULT": "Không tìm thấy kết quả",
-  "SELECTED_CITIES": "Thành Phố Đã Chọn",
+  "SELECTED_CITIES": "Thành phố đã chọn",
   "DISABLED_ADD_MESSAGE": "Bạn đã chọn thành phố này hoặc đã đạt tối đa 10 thành phố.",
   "ADD": "Thêm",
   "REMOVE": "Xóa",
   "MORNING": "Sáng",
   "AFTERNOON": "Trưa",
   "EVENING": "Chiều",
-  "NIGHT": "Tối"
+  "NIGHT": "Tối",
+  "CURRENT_LOCATION": "Vị trí hiện tại"
 }
